--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,11 @@
+@import "_common";
+
+@import "sections/header";
+@import "sections/about";
+
 :root {
   --accent: #000000;
+  --cta: #263238;
   --accent-light: #8f95a5;
   --pure-wite: #ffffff;
 }
@@ -35,70 +41,3 @@ html {
   font-style: bold;
 }
 
-body {
-  font-family: "OS Poppins", sans-serif;
-  margin: 0;
-}
-
-.container {
-  width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-// portfolio
-
-.header__inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 1em 0;
-  margin: 53px 0;
-}
-
-.header__nav {
-  width: 60%;
-  margin-left: auto;
-}
-
-.logo {
-  text-align: center;
-  max-width: 30%;
-}
-
-.header__link {
-  text-decoration: none;
-  text-transform: uppercase;
-  display: inline-block;
-}
-
-.menu-toggler {
-  display: none;
-}
-
-.menu {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  justify-content: center;
-}
-
-.menu__item + .menu__item {
-  margin-left: 12px;
-}
-
-.menu__link {
-  padding: 0.8em 1.2em;
-  text-decoration: none;
-  // color: var(--pure-white);
-  // border-radius: 0.4em;
-  // background-color: var(--accent-light);
-}
-.menu__link:hover {
-  background-color: var(--accent);
-}
-
-.menu__toggler {
-  display: none;
-}
