--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,29 +41,26 @@ body {
 }
 
 .container {
-  width: 1140px;
+  max-width: 1240px;
   margin: 0 auto;
-  padding: 0 15px;
 }
-// portfolio
 
 .header__inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   padding: 1em 0;
   margin: 53px 0;
 }
 
-.header__nav {
-  width: 60%;
-  margin-left: auto;
-}
-
 .logo {
-  text-align: center;
-  max-width: 30%;
+  width: 106px;
+  height: 54px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 54px;
 }
 
 .header__link {
@@ -82,23 +79,38 @@ body {
   list-style: none;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .menu__item + .menu__item {
-  margin-left: 12px;
+  margin-left: 39px;
 }
 
 .menu__link {
-  padding: 0.8em 1.2em;
   text-decoration: none;
-  // color: var(--pure-white);
-  // border-radius: 0.4em;
-  // background-color: var(--accent-light);
-}
-.menu__link:hover {
-  background-color: var(--accent);
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: var(--accent);
 }
 
 .menu__toggler {
   display: none;
+}
+.header__button {
+  margin-left: 244px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #000000;
+  padding: 17px 50px;
+  width: 220px;
+  background-color: transparent;
+  border: 2px solid black;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
