added section contacts and footer

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -21,3 +21,10 @@ body {
     line-height: 30px;
     text-decoration: none;
 }
+.section-title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 80px;
+    color: var(-accent);
+}
