import skills.scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "sections/about";
 @import "sections/contact";
 @import "sections/footer";
+@import "sections/skills";
 
 :root {
   --accent: #000000;
