edited contacts and footer

--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,25 +1,27 @@
 .footer-line {
-    margin: 133px 0 31px 0;
+    margin: 132px 20px 0 0;
     width: 1338px;
     height: 1px;
-    background: #C4C4C4;
+    background: #C4C4C4; 
 }
 .footer {
     &__inner {
         display: flex;
+        flex-wrap: wrap;
+        // grid-template-columns: repeat(4, 1fr);
+        // grid-gap: 30px;
     }
-    &__inner-img img {
-        width: 106px;
-        padding-top: 31px;
-    }
-    &__inner ul{
+    &__inner-items ul {
+      
+        list-style: none;
         display: flex;
         flex-wrap: wrap;
-        margin-left: 481px;
+        align-items: center;
+        padding-left: 595px;
+        padding-top: 38px;
     }
-    &__inner-list {
-        list-style: none;
-        padding-top: 55px;
+    &__inner-list + &__inner-list  {
+        margin-left: 3px;
     }
     &__inner-link {
         text-decoration: none;
@@ -27,11 +29,13 @@
         font-size: 24px;
         line-height: 36px;
         color: var(--accent-light);
-        
     }
     &__inner-link::after {
         content: "\2022";
-        padding: 0 5px;
+        padding: 0 5px 0 0;
+    }
+    &__inner-logo {
+        width: 106px;
+        margin-top: 41px;
     }
 }
-
