--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -4,7 +4,7 @@ body {
 }
   
 .container {
-    width: 1440px;
+    max-width: 1338px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -13,7 +13,7 @@ body {
     height: 60px;
     padding: 15px 52px;
     background-color: var(--cta);
-    color: var(--pure-wite);
+    color: var(--pure-white);
     border-radius: 5px;
     font-style: normal;
     font-weight: 500;
@@ -27,4 +27,5 @@ body {
     font-size: 48px;
     line-height: 80px;
     color: var(-accent);
+    text-transform: capitalize;
 }
