--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -1,55 +1,48 @@
-.contact {
+  .contact {
+
     &__inner {
         display: flex;
-        justify-content: space-between;
     }
-    &__inner-form p {
-        margin: 0;
-        padding: 37px 0 52px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 30px;
-        color: var(--accent-light);
-    }
-    &__inner form {
-        display: flex;
-    }
-    &__inner-form {
-        margin-left: 111px;
+    &__inner-column {
+        max-width: 770px;
+        margin-right: 81px;
     }
     &__inner-img {
-        width: 477px;
+        height: 100%;
     }
-    input[type=email] {
-        padding: 0;
-        margin-right: 12px;
-        width: 450px;
-        height: 80px;
-        border: 1px solid #8F95A5;
-        box-sizing: border-box;
-        border-radius: 10px;
-        }
-    input[type=email]::placeholder {
-        padding: 33px;
+    &__inner-txt {
+        padding: 0 0 25px;
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 20px;
+        line-height: 30px;
         color: var(--accent-light);
     }
-    input[type=submit] {
-        width: 264px;
-        height: 80px;
-        background: #263238;
-        border-radius: 10px;
-        border: none;
-    
-        font-size: 20px;
-        color: var(--pure-white);
-        vertical-align: top;
-        line-height: 30px;
-        margin: 0;
-        padding: 0;
-    }
-}    
+}
+.contact__form {
+    display: flex;
+}
+.contact-email {
+    width: 450px;
+    height: 80px;
+    border: 1px solid #8F95A5;
+    border-radius: 10px;
+}
+.contact-email::placeholder {
+    padding: 31px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--accent-light);
+}
+.contact-btn {
+    width: 264px;
+    height: 80px;
+    border-radius: 10px;
+    border: none;
+    font-size: 20px;
+    color: var(--pure-white);
+    line-height: 30px;
+    margin-left: 12px;
+}
