--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -18,7 +18,7 @@
         align-items: center;
     }
     &__inner-item + &__inner-item {
-        margin-left: 123px;
+        margin-left: 128px;
     }
     &__inner p {
         font-style: normal;
@@ -28,6 +28,9 @@
         color: var(--accent-light);
     }
     &__inner-txt {
+        margin-bottom: 66px;
+    }
+    &__inner-items p {
         margin: 0;
         padding: 0;
     }
@@ -36,6 +39,6 @@
         font-size: 48px;
         color: #2A3246;
         text-align: center;
+        margin: 0;
     }
 }
-
