Add section main

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "_common";
 
 @import "sections/header";
+@import "sections/main";
 @import "sections/about";
 @import "sections/contact";
 @import "sections/footer";
